# python-poetry

./: Dockerfile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ruff.yml  test.yml
src/: arquitetura.py  payment.py
